...
                              4  : false,
                              5  : false,
                              6  : false,
                              7  : false,
                              8  : true,
                              9  : true,
                              10  : true])
    
    let numbersCountForLevel = [1  : 25,
                                2  : 30,
                                3  : 25,
                                4  : 30,
                                5  : 30,
...
