...
            effect = UIBlurEffect(style: .systemUltraThinMaterial)
        } else {
            effect = UIBlurEffect(style: .light)
        }
            
        titleLabel.text = NSLocalizedString("START", comment: "Localized kind: start button")
        titleLabel.accessibilityIdentifier = "start_label"
        
        updateDetails()
                
        let stackView = UIStackView(arrangedSubviews: [titleLabel, detailsLabel])
        stackView.axis = .vertical
        stackView.spacing = 2
...
