...
        
        let tap = UITapGestureRecognizer(target: self, action: #selector(startGame))
        startGameButton.addGestureRecognizer(tap)
    }
    
    private func setupSettingsButton() {
        let gearImage = UIImage(named: "gear")?.withRenderingMode(.alwaysTemplate)
        
        settingsButton = UIButton()
        settingsButton.setImage(gearImage, for: .normal)
        settingsButton.tintColor = .white
        settingsButton.imageView?.contentMode = .scaleAspectFit
        settingsButton.imageEdgeInsets = UIEdgeInsets(top: 17.0, left: 17.0, bottom: 17.0, right: 17.0)
...
